--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,14 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# API Keys and Secrets - DO NOT COMMIT
+.env
+*.env
+!.env.example
+api_keys.dart
+secrets.dart
+
+# Antigravity artifacts (optional - comment out if you want to track these)
+.gemini/
+
